# jspr

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: conf.py  index.rst  intro.rst
docs/spec/: funcs.rst  lang.rst  sforms.rst  spec.rst
jspr/: __init__.py  __main__.py  kernel.py  kernel_test.py  kws.py  lang.py  lang_test.py  main.py  mod.py  runtime.py  util.py
tests/: all_test.py  schema.json  test_basics.yml  test_is.yml  test_lang.yml  test_test.yml
